tests/NormalTests/paczka1/small_fuzzy/11624462.err
Error in line 1: A636 S620 69,5
Error in line 8: xNzQREJuKr A636 72,8
Error in line 13: xNzQREJuKr A812 29,4
